<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authorization">


    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/_555597459" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="402dp"
        android:layout_height="48dp"
        android:layout_marginTop="480dp"
        android:autofillHints="username"
        android:hint="@string/hint_username"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView5"
        android:layout_width="399dp"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:hint="@string/hint_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/textView11"
        android:layout_width="410dp"
        android:layout_height="48dp"
        android:layout_marginTop="435dp"
        android:autofillHints="surname"
        android:hint="@string/hint_surname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView12"
        android:layout_width="408dp"
        android:layout_height="48dp"
        android:layout_marginBottom="300dp"
        android:autofillHints="phone_number"
        android:hint="@string/hint_phone_number"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textView13"
        android:layout_width="410dp"
        android:layout_height="48dp"
        android:layout_marginTop="340dp"
        android:autofillHints="password"
        android:hint="@string/hint_password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView15"
        android:layout_width="406dp"
        android:layout_height="48dp"
        android:autofillHints="confirm_password"
        android:hint="@string/hint_password"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginTop="600dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
